--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,5 @@
-// GENERATED FILE - DO NOT EDIT
 include ':app'
 include ':capacitor-android'
-project(':capacitor-android').projectDir = new File('capacitor-android')
+project(':capacitor-android').projectDir = new File(settingsDir, '../node_modules/@capacitor/android/capacitor')
 
 apply from: 'capacitor.settings.gradle'
