--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,16 +1,12 @@
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.9.24'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:8.2.1'
     }
 }
 
@@ -18,6 +14,16 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+    }
+    // This new block will resolve library version conflicts automatically.
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.core:core:1.13.1'
+            force 'androidx.core:core-ktx:1.13.1'
+            force 'androidx.appcompat:appcompat:1.7.0'
+            force 'com.google.android.material:material:1.12.0'
+            force 'androidx.webkit:webkit:1.11.0'
+        }
     }
 }
 
